--- a/web/checkout.html
+++ b/web/checkout.html
@@ -25,7 +25,7 @@
                     <div class="bg-white rounded-lg shadow-sm p-5">
                         <div class="tab-content">
                             <div id="nav-card" class="">
-                                <form role="form">
+                                <form role="form" action="order.php">
                                     <div class="form-group">
                                         <label for="username">Full name</label>
                                         <input type="text" name="username" placeholder="John Doe" required class="form-control">
